# qtdemo

./: .gitignore  README.md
client/: CMakeLists.txt  README.md  main.cpp
client/user/: user.cpp  user.h
main/: main.pro
main/app/: ColorButton.qml  ColorEditText.qml  LoginForm.ui.qml  app.pro  login.qml  main.cpp  qml.qrc
main/user/: user.cpp  user.h  user.pro  userdao.cpp  userdao.h
main/voice/: voice.cpp  voice.h  voice.pro
service/user-service/: go.mod  go.sum
service/user-service/user-api/graphql/: gqlgen.yml  make.bat  server.go
service/user-service/user-api/graphql/graph/: schema.graphqls  schema.resolvers.go
service/user-service/user-api/graphql/graph/model/: models_gen.go
